nvml-wrapper-sys/nvml.h

    
    typedef union nvmlValue_st
    {
        double dVal;               
        unsigned int uiVal;        
        unsigned long ulVal;       
        unsigned long long ullVal; 
        signed long long sllVal;   
    } nvmlValue_t;
    typedef struct nvmlSample_st
    {
        unsigned long long timeStamp; 
        nvmlValue_t sampleValue;      
    } nvmlSample_t;
    typedef enum nvmlPerfPolicyType_enum
    {
        NVML_PERF_POLICY_POWER = 0,           
        NVML_PERF_POLICY_THERMAL = 1,         
        NVML_PERF_POLICY_SYNC_BOOST = 2,      
        NVML_PERF_POLICY_BOARD_LIMIT = 3,     
        NVML_PERF_POLICY_LOW_UTILIZATION = 4, 
        NVML_PERF_POLICY_RELIABILITY = 5,     
        NVML_PERF_POLICY_TOTAL_APP_CLOCKS = 10,  
        NVML_PERF_POLICY_TOTAL_BASE_CLOCKS = 11, 
        NVML_PERF_POLICY_COUNT
    } nvmlPerfPolicyType_t;
    typedef struct nvmlViolationTime_st
    {
        unsigned long long referenceTime; 
        unsigned long long violationTime; 
    } nvmlViolationTime_t;
    typedef enum nvmlEnableState_enum
    {
        NVML_FEATURE_DISABLED = 0, 
        NVML_FEATURE_ENABLED = 1   
    } nvmlEnableState_t;
    typedef enum nvmlBrandType_enum
    {
        NVML_BRAND_UNKNOWN = 0,
        NVML_BRAND_QUADRO = 1,
        NVML_BRAND_TESLA = 2,
        NVML_BRAND_NVS = 3,
        NVML_BRAND_GRID = 4,
        NVML_BRAND_GEFORCE = 5,
        NVML_BRAND_TITAN = 6,
        NVML_BRAND_COUNT
    } nvmlBrandType_t;
    typedef enum nvmlTemperatureThresholds_enum
    {
        NVML_TEMPERATURE_THRESHOLD_SHUTDOWN = 0, 
        NVML_TEMPERATURE_THRESHOLD_SLOWDOWN = 1, 
        NVML_TEMPERATURE_THRESHOLD_MEM_MAX = 2,  
        NVML_TEMPERATURE_THRESHOLD_GPU_MAX = 3,  
        NVML_TEMPERATURE_THRESHOLD_COUNT
    } nvmlTemperatureThresholds_t;
    typedef enum nvmlTemperatureSensors_enum
    {
        NVML_TEMPERATURE_GPU = 0, 
        NVML_TEMPERATURE_COUNT
    } nvmlTemperatureSensors_t;
    typedef enum nvmlComputeMode_enum
    {
        NVML_COMPUTEMODE_DEFAULT = 0,           
        NVML_COMPUTEMODE_EXCLUSIVE_THREAD = 1,  
        NVML_COMPUTEMODE_PROHIBITED = 2,        
        NVML_COMPUTEMODE_EXCLUSIVE_PROCESS = 3, 
        NVML_COMPUTEMODE_COUNT
    } nvmlComputeMode_t;
    typedef enum nvmlMemoryErrorType_enum
    {
        NVML_MEMORY_ERROR_TYPE_CORRECTED = 0,
        NVML_MEMORY_ERROR_TYPE_UNCORRECTED = 1,
        NVML_MEMORY_ERROR_TYPE_COUNT 
    } nvmlMemoryErrorType_t;
    typedef enum nvmlEccCounterType_enum
    {
        NVML_VOLATILE_ECC = 0,  
        NVML_AGGREGATE_ECC = 1, 
        NVML_ECC_COUNTER_TYPE_COUNT 
    } nvmlEccCounterType_t;
    typedef enum nvmlClockType_enum
    {
        NVML_CLOCK_GRAPHICS = 0, 
        NVML_CLOCK_SM = 1,       
        NVML_CLOCK_MEM = 2,      
        NVML_CLOCK_VIDEO = 3,    
        NVML_CLOCK_COUNT 
    } nvmlClockType_t;
    typedef enum nvmlClockId_enum
    {
        NVML_CLOCK_ID_CURRENT = 0,            
        NVML_CLOCK_ID_APP_CLOCK_TARGET = 1,   
        NVML_CLOCK_ID_APP_CLOCK_DEFAULT = 2,  
        NVML_CLOCK_ID_CUSTOMER_BOOST_MAX = 3, 
        NVML_CLOCK_ID_COUNT 
    } nvmlClockId_t;
    typedef enum nvmlDriverModel_enum
    {
        NVML_DRIVER_WDDM = 0, 
        NVML_DRIVER_WDM = 1   
    } nvmlDriverModel_t;
    typedef enum nvmlPStates_enum
    {
        NVML_PSTATE_0 = 0,       
        NVML_PSTATE_1 = 1,       
        NVML_PSTATE_2 = 2,       
        NVML_PSTATE_3 = 3,       
        NVML_PSTATE_4 = 4,       
        NVML_PSTATE_5 = 5,       
        NVML_PSTATE_6 = 6,       
        NVML_PSTATE_7 = 7,       
        NVML_PSTATE_8 = 8,       
        NVML_PSTATE_9 = 9,       
        NVML_PSTATE_10 = 10,     
        NVML_PSTATE_11 = 11,     
        NVML_PSTATE_12 = 12,     
        NVML_PSTATE_13 = 13,     
        NVML_PSTATE_14 = 14,     
        NVML_PSTATE_15 = 15,     
        NVML_PSTATE_UNKNOWN = 32 
    } nvmlPstates_t;
    typedef enum nvmlGom_enum
    {
        NVML_GOM_ALL_ON = 0, 
        NVML_GOM_COMPUTE = 1, 
        NVML_GOM_LOW_DP = 2 
    } nvmlGpuOperationMode_t;
    typedef enum nvmlInforomObject_enum
    {
        NVML_INFOROM_OEM = 0,   
        NVML_INFOROM_ECC = 1,   
        NVML_INFOROM_POWER = 2, 
        NVML_INFOROM_COUNT 
    } nvmlInforomObject_t;
    typedef enum nvmlReturn_enum
    {
        NVML_SUCCESS = 0,                        
        NVML_ERROR_UNINITIALIZED = 1,            
        NVML_ERROR_INVALID_ARGUMENT = 2,         
        NVML_ERROR_NOT_SUPPORTED = 3,            
        NVML_ERROR_NO_PERMISSION = 4,            
        NVML_ERROR_ALREADY_INITIALIZED = 5,      
        NVML_ERROR_NOT_FOUND = 6,                
        NVML_ERROR_INSUFFICIENT_SIZE = 7,        
        NVML_ERROR_INSUFFICIENT_POWER = 8,       
        NVML_ERROR_DRIVER_NOT_LOADED = 9,        
        NVML_ERROR_TIMEOUT = 10,                 
        NVML_ERROR_IRQ_ISSUE = 11,               
        NVML_ERROR_LIBRARY_NOT_FOUND = 12,       
        NVML_ERROR_FUNCTION_NOT_FOUND = 13,      
        NVML_ERROR_CORRUPTED_INFOROM = 14,       
        NVML_ERROR_GPU_IS_LOST = 15,             
        NVML_ERROR_RESET_REQUIRED = 16,          
        NVML_ERROR_OPERATING_SYSTEM = 17,        
        NVML_ERROR_LIB_RM_VERSION_MISMATCH = 18, 
        NVML_ERROR_IN_USE = 19,                  
        NVML_ERROR_MEMORY = 20,                  
        NVML_ERROR_NO_DATA = 21,                 
        NVML_ERROR_VGPU_ECC_NOT_SUPPORTED = 22,  
        NVML_ERROR_INSUFFICIENT_RESOURCES = 23,  
        NVML_ERROR_UNKNOWN = 999                 
    } nvmlReturn_t;
    typedef enum nvmlMemoryLocation_enum
    {
        NVML_MEMORY_LOCATION_L1_CACHE = 0,       
        NVML_MEMORY_LOCATION_L2_CACHE = 1,       
        NVML_MEMORY_LOCATION_DRAM = 2,           
        NVML_MEMORY_LOCATION_DEVICE_MEMORY = 2,  
        NVML_MEMORY_LOCATION_REGISTER_FILE = 3,  
        NVML_MEMORY_LOCATION_TEXTURE_MEMORY = 4, 
        NVML_MEMORY_LOCATION_TEXTURE_SHM = 5,    
        NVML_MEMORY_LOCATION_CBU = 6,            
        NVML_MEMORY_LOCATION_SRAM = 7,           
        NVML_MEMORY_LOCATION_COUNT 
    } nvmlMemoryLocation_t;
    typedef enum nvmlPageRetirementCause_enum
    {
        NVML_PAGE_RETIREMENT_CAUSE_MULTIPLE_SINGLE_BIT_ECC_ERRORS = 0, 
        NVML_PAGE_RETIREMENT_CAUSE_DOUBLE_BIT_ECC_ERROR = 1,           
        NVML_PAGE_RETIREMENT_CAUSE_COUNT
    } nvmlPageRetirementCause_t;
    typedef enum nvmlRestrictedAPI_enum
    {
        NVML_RESTRICTED_API_SET_APPLICATION_CLOCKS = 0,  
        NVML_RESTRICTED_API_SET_AUTO_BOOSTED_CLOCKS = 1, 
        NVML_RESTRICTED_API_COUNT
    } nvmlRestrictedAPI_t;
    typedef struct nvmlUnit_st *nvmlUnit_t;
    typedef struct nvmlHwbcEntry_st
    {
        unsigned int hwbcId;
        char firmwareVersion[32];
    } nvmlHwbcEntry_t;