nvml-wrapper-sys/src/bindings/linux.rs

#[test]
#[cfg(feature = "nightly")]
fn bindgen_test_layout_nvmlValue_st() {
    assert_eq!(::std::mem::size_of::<nvmlValue_st>() , 8usize , concat ! (
               "Size of: " , stringify ! ( nvmlValue_st ) ));
    assert_eq! (::std::mem::align_of::<nvmlValue_st>() , 8usize , concat ! (
                "Alignment of " , stringify ! ( nvmlValue_st ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlValue_st ) ) . dVal as * const _ as
                usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlValue_st ) , "::" ,
                stringify ! ( dVal ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlValue_st ) ) . uiVal as * const _ as
                usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlValue_st ) , "::" ,
                stringify ! ( uiVal ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlValue_st ) ) . ulVal as * const _ as
                usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlValue_st ) , "::" ,
                stringify ! ( ulVal ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlValue_st ) ) . ullVal as * const _ as
                usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlValue_st ) , "::" ,
                stringify ! ( ullVal ) ));
}
#[cfg(feature = "nightly")]
impl Clone for nvmlValue_st {
    fn clone(&self) -> Self { *self }
}
#[cfg(feature = "nightly")]
impl Default for nvmlValue_st {
    fn default() -> Self { unsafe { ::std::mem::zeroed() } }
}
#[cfg(feature = "nightly")]
pub type nvmlValue_t = nvmlValue_st;
#[repr(C)]
#[derive(Copy)]
#[cfg(feature = "nightly")]
pub struct nvmlSample_st {
    pub timeStamp: ::std::os::raw::c_ulonglong,
    pub sampleValue: nvmlValue_t,
}
#[test]
#[cfg(feature = "nightly")]
fn bindgen_test_layout_nvmlSample_st() {
    assert_eq!(::std::mem::size_of::<nvmlSample_st>() , 16usize , concat ! (
               "Size of: " , stringify ! ( nvmlSample_st ) ));
    assert_eq! (::std::mem::align_of::<nvmlSample_st>() , 8usize , concat ! (
                "Alignment of " , stringify ! ( nvmlSample_st ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlSample_st ) ) . timeStamp as * const
                _ as usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlSample_st ) , "::"
                , stringify ! ( timeStamp ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlSample_st ) ) . sampleValue as *
                const _ as usize } , 8usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlSample_st ) , "::"
                , stringify ! ( sampleValue ) ));
}
#[cfg(feature = "nightly")]
impl Clone for nvmlSample_st {
    fn clone(&self) -> Self { *self }
}
#[cfg(feature = "nightly")]
impl Default for nvmlSample_st {
    fn default() -> Self { unsafe { ::std::mem::zeroed() } }
}
#[cfg(feature = "nightly")]
pub type nvmlSample_t = nvmlSample_st;
#[repr(u32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum nvmlPerfPolicyType_enum {
    NVML_PERF_POLICY_POWER = 0,
    NVML_PERF_POLICY_THERMAL = 1,
    NVML_PERF_POLICY_SYNC_BOOST = 2,
    NVML_PERF_POLICY_COUNT = 3,
}
pub use self::nvmlPerfPolicyType_enum as nvmlPerfPolicyType_t;
#[repr(C)]
#[derive(Debug, Default, Copy)]
pub struct nvmlViolationTime_st {
    pub referenceTime: ::std::os::raw::c_ulonglong,
    pub violationTime: ::std::os::raw::c_ulonglong,
}
#[test]
fn bindgen_test_layout_nvmlViolationTime_st() {
    assert_eq!(::std::mem::size_of::<nvmlViolationTime_st>() , 16usize ,
               concat ! ( "Size of: " , stringify ! ( nvmlViolationTime_st )
               ));
    assert_eq! (::std::mem::align_of::<nvmlViolationTime_st>() , 8usize ,
                concat ! (
                "Alignment of " , stringify ! ( nvmlViolationTime_st ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlViolationTime_st ) ) . referenceTime
                as * const _ as usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlViolationTime_st )
                , "::" , stringify ! ( referenceTime ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlViolationTime_st ) ) . violationTime
                as * const _ as usize } , 8usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlViolationTime_st )
                , "::" , stringify ! ( violationTime ) ));
}
impl Clone for nvmlViolationTime_st {
    fn clone(&self) -> Self { *self }
}
pub type nvmlViolationTime_t = nvmlViolationTime_st;
#[repr(u32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum nvmlEnableState_enum {
    NVML_FEATURE_DISABLED = 0,
    NVML_FEATURE_ENABLED = 1,
}
pub use self::nvmlEnableState_enum as nvmlEnableState_t;
#[repr(u32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum nvmlBrandType_enum {
    NVML_BRAND_UNKNOWN = 0,
    NVML_BRAND_QUADRO = 1,
    NVML_BRAND_TESLA = 2,
    NVML_BRAND_NVS = 3,
    NVML_BRAND_GRID = 4,
    NVML_BRAND_GEFORCE = 5,
    NVML_BRAND_COUNT = 6,
}
pub use self::nvmlBrandType_enum as nvmlBrandType_t;
#[repr(u32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum nvmlTemperatureThresholds_enum {
    NVML_TEMPERATURE_THRESHOLD_SHUTDOWN = 0,
    NVML_TEMPERATURE_THRESHOLD_SLOWDOWN = 1,
    NVML_TEMPERATURE_THRESHOLD_COUNT = 2,
}
pub use self::nvmlTemperatureThresholds_enum as nvmlTemperatureThresholds_t;
#[repr(u32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum nvmlTemperatureSensors_enum {
    NVML_TEMPERATURE_GPU = 0,
    NVML_TEMPERATURE_COUNT = 1,
}
pub use self::nvmlTemperatureSensors_enum as nvmlTemperatureSensors_t;
#[repr(u32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum nvmlComputeMode_enum {
    NVML_COMPUTEMODE_DEFAULT = 0,
    NVML_COMPUTEMODE_EXCLUSIVE_THREAD = 1,
    NVML_COMPUTEMODE_PROHIBITED = 2,
    NVML_COMPUTEMODE_EXCLUSIVE_PROCESS = 3,
    NVML_COMPUTEMODE_COUNT = 4,
}
pub use self::nvmlComputeMode_enum as nvmlComputeMode_t;
#[repr(u32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum nvmlMemoryErrorType_enum {
    NVML_MEMORY_ERROR_TYPE_CORRECTED = 0,
    NVML_MEMORY_ERROR_TYPE_UNCORRECTED = 1,
    NVML_MEMORY_ERROR_TYPE_COUNT = 2,
}
pub use self::nvmlMemoryErrorType_enum as nvmlMemoryErrorType_t;
#[repr(u32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum nvmlEccCounterType_enum {
    NVML_VOLATILE_ECC = 0,
    NVML_AGGREGATE_ECC = 1,
    NVML_ECC_COUNTER_TYPE_COUNT = 2,
}
pub use self::nvmlEccCounterType_enum as nvmlEccCounterType_t;
#[repr(u32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum nvmlClockType_enum {
    NVML_CLOCK_GRAPHICS = 0,
    NVML_CLOCK_SM = 1,
    NVML_CLOCK_MEM = 2,
    NVML_CLOCK_VIDEO = 3,
    NVML_CLOCK_COUNT = 4,
}
pub use self::nvmlClockType_enum as nvmlClockType_t;
#[repr(u32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum nvmlClockId_enum {
    NVML_CLOCK_ID_CURRENT = 0,
    NVML_CLOCK_ID_APP_CLOCK_TARGET = 1,
    NVML_CLOCK_ID_APP_CLOCK_DEFAULT = 2,
    NVML_CLOCK_ID_CUSTOMER_BOOST_MAX = 3,
    NVML_CLOCK_ID_COUNT = 4,
}
pub use self::nvmlClockId_enum as nvmlClockId_t;
#[repr(u32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum nvmlDriverModel_enum { NVML_DRIVER_WDDM = 0, NVML_DRIVER_WDM = 1, }
pub use self::nvmlDriverModel_enum as nvmlDriverModel_t;
#[repr(u32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum nvmlPStates_enum {
    NVML_PSTATE_0 = 0,
    NVML_PSTATE_1 = 1,
    NVML_PSTATE_2 = 2,
    NVML_PSTATE_3 = 3,
    NVML_PSTATE_4 = 4,
    NVML_PSTATE_5 = 5,
    NVML_PSTATE_6 = 6,
    NVML_PSTATE_7 = 7,
    NVML_PSTATE_8 = 8,
    NVML_PSTATE_9 = 9,
    NVML_PSTATE_10 = 10,
    NVML_PSTATE_11 = 11,
    NVML_PSTATE_12 = 12,
    NVML_PSTATE_13 = 13,
    NVML_PSTATE_14 = 14,
    NVML_PSTATE_15 = 15,
    NVML_PSTATE_UNKNOWN = 32,
}
pub use self::nvmlPStates_enum as nvmlPstates_t;
#[repr(u32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum nvmlGom_enum {
    NVML_GOM_ALL_ON = 0,
    NVML_GOM_COMPUTE = 1,
    NVML_GOM_LOW_DP = 2,
}
pub use self::nvmlGom_enum as nvmlGpuOperationMode_t;
#[repr(u32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum nvmlInforomObject_enum {
    NVML_INFOROM_OEM = 0,
    NVML_INFOROM_ECC = 1,
    NVML_INFOROM_POWER = 2,
    NVML_INFOROM_COUNT = 3,
}
pub use self::nvmlInforomObject_enum as nvmlInforomObject_t;
#[repr(u32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum nvmlReturn_enum {
    NVML_SUCCESS = 0,
    NVML_ERROR_UNINITIALIZED = 1,
    NVML_ERROR_INVALID_ARGUMENT = 2,
    NVML_ERROR_NOT_SUPPORTED = 3,
    NVML_ERROR_NO_PERMISSION = 4,
    NVML_ERROR_ALREADY_INITIALIZED = 5,
    NVML_ERROR_NOT_FOUND = 6,
    NVML_ERROR_INSUFFICIENT_SIZE = 7,
    NVML_ERROR_INSUFFICIENT_POWER = 8,
    NVML_ERROR_DRIVER_NOT_LOADED = 9,
    NVML_ERROR_TIMEOUT = 10,
    NVML_ERROR_IRQ_ISSUE = 11,
    NVML_ERROR_LIBRARY_NOT_FOUND = 12,
    NVML_ERROR_FUNCTION_NOT_FOUND = 13,
    NVML_ERROR_CORRUPTED_INFOROM = 14,
    NVML_ERROR_GPU_IS_LOST = 15,
    NVML_ERROR_RESET_REQUIRED = 16,
    NVML_ERROR_OPERATING_SYSTEM = 17,
    NVML_ERROR_LIB_RM_VERSION_MISMATCH = 18,
    NVML_ERROR_IN_USE = 19,
    NVML_ERROR_NO_DATA = 20,
    NVML_ERROR_UNKNOWN = 999,
}
pub use self::nvmlReturn_enum as nvmlReturn_t;
#[repr(u32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum nvmlMemoryLocation_enum {
    NVML_MEMORY_LOCATION_L1_CACHE = 0,
    NVML_MEMORY_LOCATION_L2_CACHE = 1,
    NVML_MEMORY_LOCATION_DEVICE_MEMORY = 2,
    NVML_MEMORY_LOCATION_REGISTER_FILE = 3,
    NVML_MEMORY_LOCATION_TEXTURE_MEMORY = 4,
    NVML_MEMORY_LOCATION_TEXTURE_SHM = 5,
    NVML_MEMORY_LOCATION_COUNT = 6,
}
pub use self::nvmlMemoryLocation_enum as nvmlMemoryLocation_t;
#[repr(u32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum nvmlPageRetirementCause_enum {
    NVML_PAGE_RETIREMENT_CAUSE_MULTIPLE_SINGLE_BIT_ECC_ERRORS = 0,
    NVML_PAGE_RETIREMENT_CAUSE_DOUBLE_BIT_ECC_ERROR = 1,
    NVML_PAGE_RETIREMENT_CAUSE_COUNT = 2,
}
pub use self::nvmlPageRetirementCause_enum as nvmlPageRetirementCause_t;
#[repr(u32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum nvmlRestrictedAPI_enum {
    NVML_RESTRICTED_API_SET_APPLICATION_CLOCKS = 0,
    NVML_RESTRICTED_API_SET_AUTO_BOOSTED_CLOCKS = 1,
    NVML_RESTRICTED_API_COUNT = 2,
}
pub use self::nvmlRestrictedAPI_enum as nvmlRestrictedAPI_t;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct nvmlUnit_st([u8; 0]);
pub type nvmlUnit_t = *mut nvmlUnit_st;
#[repr(C)]
#[derive(Debug, Default, Copy)]
pub struct nvmlHwbcEntry_st {
    pub hwbcId: ::std::os::raw::c_uint,
    pub firmwareVersion: [::std::os::raw::c_char; 32usize],
}
#[test]
fn bindgen_test_layout_nvmlHwbcEntry_st() {
    assert_eq!(::std::mem::size_of::<nvmlHwbcEntry_st>() , 36usize , concat !
               ( "Size of: " , stringify ! ( nvmlHwbcEntry_st ) ));
    assert_eq! (::std::mem::align_of::<nvmlHwbcEntry_st>() , 4usize , concat !
                ( "Alignment of " , stringify ! ( nvmlHwbcEntry_st ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlHwbcEntry_st ) ) . hwbcId as * const
                _ as usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlHwbcEntry_st ) ,
                "::" , stringify ! ( hwbcId ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlHwbcEntry_st ) ) . firmwareVersion as
                * const _ as usize } , 4usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlHwbcEntry_st ) ,
                "::" , stringify ! ( firmwareVersion ) ));
}
impl Clone for nvmlHwbcEntry_st {
    fn clone(&self) -> Self { *self }
}
